# Trailhead

./: .gitignore  AGENTS.md  Cargo.toml  INFRA_RENAME_PLAN.md
.github/workflows/: build-frontend-ios.yml  build.yml  deploy-trailhead.yml  release.yml
containers/agent-runner/: Dockerfile
containers/worker/: AGENTS.md  Dockerfile  entrypoint.sh  opencode.json.tmpl
crates/agent-runner/: Cargo.toml
crates/agent-runner/src/: lib.rs  main.rs  session.rs
crates/agent-runner/src/agent/: message.rs  mod.rs
crates/agent-runner/src/provider/: anthropic.rs  mod.rs  openai.rs  openai_compatible.rs
crates/trailhead-core/: Cargo.toml
crates/trailhead-service/: AGENTS.md  Cargo.toml  build.rs
crates/trailhead-service/skills/: create_pr.md  fix.md  implement.md  pause.md  plan.md  plan_detail.md  review.md  test.md
crates/trailhead-service/src/: api.rs  config.rs  db.rs  jobs.rs  main.rs  mcp.rs  scheduler.rs  web.rs
crates/trailhead-service/src/ide/: cursor.rs  mod.rs  opencode.rs  shell.rs  ssh.rs  vscode.rs
crates/trailhead-service/src/provider/: docker.rs  mod.rs
crates/trailhead-service/src/worker/: adapter.rs  events.rs  mod.rs  permission.rs
crates/trailhead-service/src/workflow/: mod.rs  parser.rs  resolver.rs
crates/trailhead-service/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/trailhead-service/ui/src/: App.tsx  JobList.tsx  WorkerList.tsx  types.ts
crates/trailhead-service/ui/static/: index.html
crates/trailhead-service/workflows/: exploration.yaml  feature.yaml  hello-world-advanced.yaml  hello-world.yaml  quick-fix.yaml  refactor.yaml
design/: .design-canvas.state.json  .fan-states-canvas.state.json  .node-system-canvas.state.json  .thumbnail  CLAUDE.md  Fan Node State Concepts.html  Fan-out Container Concepts.html  Flutter Handoff.html  Node System Exploration.html  Workflow Builder v1.html  Workflow Builder.html  serve.ts  themes.css
design/export/: Flutter Handoff.html
design/handoff/: Flutter Handoff.html  README.md  tokens.json
design/node-system/: app.jsx  design-canvas.jsx  kit.jsx  synthesis.jsx  tree.jsx
design/src/: App.jsx  BuilderOverlay.jsx  Canvas.jsx  Common.jsx  Filmstrip.jsx  (+8 more)
design/src-fan/: FanApp.jsx  concepts1.jsx  concepts2.jsx  kit.jsx
design/src-fanheader/: FanStatesApp.jsx  design-canvas.jsx  fan-state-concepts.jsx
docs/: ui-polish-handoff.md
frontend/: AGENTS.md  pubspec.yaml  serve.js
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: build-trailhead.sh
(+220 files in other folders)
