[package]
name = "agent-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
trailhead-core = { path = "../trailhead-core" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-openai = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
glob = "0.3"
regex = "1"
similar = "2"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
