[package]
name = "trailhead-service"
version = "0.3.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bollard = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
cel = "0.13"
rmcp = { version = "=1.4.0", features = ["server", "transport-streamable-http-server", "schemars"] }
axum = { version = "0.8", features = ["http1", "tokio"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
minijinja = "2"
schemars = "1"
chrono = "0.4"
async-trait = "0.1"
futures-util = "0.3"
 toml = "0.8"
sha2 = "0.10"
 reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
tempfile = "3"
